# wordchipper

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
bindings/python/: README.md
bindings/python/benchmarks/: conftest.py  test_bench_encode.py
bindings/python/src/: lib.rs
bindings/wasm/src/: lib.rs
book/: README.md  setup-wasm.sh
book/src/: SUMMARY.md  bindings.md  custom-logos-lexers.md  feature-flags.md  how-tokenizers-work.md  interactive-tokenizer.md  introduction.md  no-std.md  performance.md  training.md
crates/wordchipper/: Cargo.toml  README.md
crates/wordchipper-bench/: Cargo.toml  README.md
crates/wordchipper-bench/benches/: encoding_parallel.rs
crates/wordchipper-data/src/: dataset.rs
crates/wordchipper-disk-cache/src/: disk_cache.rs  path_resolver.rs
crates/wordchipper-download-cache/: Cargo.toml
crates/wordchipper-download-cache/src/: disk_cache.rs  lib.rs  path_resolver.rs
crates/wordchipper-experimental/: Cargo.toml
crates/wordchipper-experimental/src/concurrency/: lru_pool_toy.rs
crates/wordchipper/benches/: decoding.rs  encoding.rs  spanning.rs
crates/wordchipper/src/: lib.rs  types.rs
crates/wordchipper/src/compat/: mod.rs  ranges.rs
crates/wordchipper/src/concurrency/: lru_pool_toy.rs  mod.rs  pool_toy.rs  (+1 more)
crates/wordchipper/tests/: validation.rs
examples/sample-timer/: Cargo.toml  README.md
examples/sample-timer/src/: engines.rs  main.rs  wordchipper_support.rs
examples/token-cli/src/: main.rs
examples/tokenizer_trainer/src/: main.rs
examples/wasm-browser/: index.html
(+84 files in other folders)
